deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario-deployment2
spec:
  replicas: 1  # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: mario2
  template:
    metadata:
      labels:
        app: mario2
    spec:
      containers:
      - name: mario-container2
        image: sevenajay/mario:latest
        ports:
        - containerPort: 80
