service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-service2
spec:
  type: NodePort
  selector:
    app: mario2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
